deployment/deploy_django_v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  labels:
    app: django
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django-image
        image: django_app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        
---
apiVersion: v1
kind: Service
metadata:
  name: serv-deployment
spec:
  type: NodePort
  selector:
    app: django
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
