deployment/service_django_v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: serv-deployment
spec:
  type: NodePort
  selector:
    app: django
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
